@@ -229,5 +229,14 @@ enum vm_regan_acttype {
 static VALUE make_no_method_exception(VALUE exc, const char *format,
 				      VALUE obj, int argc, const VALUE *argv);
 
+/* SVAR */
+
+struct SVAR {
+    VALUE flags;
+    const rb_cref_t *cref;
+    VALUE lastline;
+    VALUE backref;
+    VALUE others;
+};
 
 #endif /* RUBY_INSNHELPER_H */
